Sort a bug out oout on the search box concerning the autocomplete having it display in front of elements instead of behind

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -3,14 +3,13 @@ html {
 }
 
 body {
-    background: url('/media/background-wallpaper.jpg') no-repeat center center fixed;
+    background: url('/media/workout-pic.jpg') no-repeat center center fixed;
     background-size: cover;
     height: calc(100vh - 164px);
     color: #555;
-    font-family: 'Lato';
+    font-family: 'Ubuntu', sans-serif;
 }
 
-/* from Bulma */
 .icon {
     align-items: center;
     display: inline-flex;
@@ -19,18 +18,15 @@ body {
     width: 1.5rem;
 }
 
-.logo-font {
-    text-transform: uppercase;
-}
-
-.main-logo-link {
-    width: fit-content;
-}
-
 .shop-now-button {
-    background: black;
+    background: #FF0000;
     color: white;
-    min-width: 260px;
+    min-width: 50%;
+}
+
+#home-text{
+    font-weight: 500;
+    color: #fff;
 }
 
 .btn-black {
@@ -38,17 +34,19 @@ body {
     color: white;
 }
 
-.btn-outline-black {
-    background: white;
-    color: black !important; /* use important to override link colors for <a> elements */
-    border: 1px solid black;
+.btn-outline {
+    border: 1px solid red;
+    color: grey;
 }
 
-.btn-outline-black:hover,
-.btn-outline-black:active,
-.btn-outline-black:focus {
-    background: black;
-    color: white !important;
+.btn-outline:hover,
+.btn-outline:active,
+.btn-outline:focus {
+    background: red;
+    color: black;
+}
+.drop-menu:hover{
+    background: #000;
 }
 
 .shop-now-button:hover,
@@ -57,8 +55,8 @@ body {
 .btn-black:hover,
 .btn-black:active,
 .btn-black:focus {
-    background: #222;
-    color: white;
+    background-color: #B0C4DE;
+    color: #000;
 }
 
 .text-black {
@@ -79,21 +77,20 @@ body {
 	top: 0;
 	left: 0;
 	position: fixed;
-	background: white;
 	z-index: -1;
 }
 
 a.category-badge > span.badge:hover {
-    background: #212529 !important;
+    background: #B0C4DE !important;
     color: #fff !important;
 }
 
 .btt-button {
-    height: 42px;
-    width: 42px;
+    height: 2.625rem;
+    width: 2.625em;
     position: fixed;
-    bottom: 10px;
-    right: 10px;
+    bottom: 0.625rem;
+    right: 0.625rem;
 }
 
 .btt-link,
@@ -102,17 +99,27 @@ a.category-badge > span.badge:hover {
     cursor: pointer;
 }
 
-input[name='q']::placeholder {
-    color: #aab7c4;
+.ui-autocomplete {
+    position: absolute;
+    top: 0;
+    left: 0;
+    cursor: default;
+    z-index:9050!important;
 }
 
-/* ------------------------------- bootstrap toasts */
+/*
+input[name='q']::placeholder {
+    color: 	#FF6347;
+}
+*/
+
+/* ---- bootstrap toasts --- */
 
 .message-container {
     position: fixed;
-    top: 72px;
-    right: 15px;
-    z-index: 99999999999;
+    top: 4.5rem;
+    right: 1rem;
+    z-index: 99999999999; /* displays over everything in its way */
 }
 
 .custom-toast {
@@ -122,6 +129,7 @@ input[name='q']::placeholder {
 .toast-capper {
     height: 2px;
 }
+
 
 /* from CSS-tricks.com: https://css-tricks.com/snippets/css/css-triangle/ */
 .arrow-up {
@@ -174,7 +182,11 @@ input[name='q']::placeholder {
     overflow-y: auto;
 }
 
-/* -------------------------------- Media Queries */
+.btn-danger{
+    background-color: red !important;
+}
+
+/* ---- Media Queries ---- */
 
 /* Slightly larger container on xl screens */
 @media (min-width: 1200px) {
